# supervision_nucleaire

./: LICENSE  Procfile  README.md  app.py  config.py  pyproject.toml  requirements.txt  test.json  test_app.py
static/: app.js
templates/: error.html  index.html
