[tool.poetry]
name = "supervision-nucleaire"
version = "0.1.0"
description = "Superviser la production nucléaire en infrajournalier"
authors = ["jihaneBenkoulouch"]
readme = "README.md"
packages = [{include = "supervision_nucleaire"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
requests = "^2.31.0"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
flask-caching = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
